# Multimodal-Parsing

./: .env  Deva.ipynb  README.md  chunking.py  dev.ipynb  docker-compose.yaml  helper.py  ingestion.py  main.py  pyproject.toml
