[project]
name = "localrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asttokens>=3.0.1",
    "comm>=0.2.3",
    "google-generativeai>=0.8.6",
    "python-dotenv>=1.2.1",
    "tesseract>=0.1.3",
    "unstructured[all-docs]>=0.18.31",
]
